# protobuf-to-dict

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_tests.sh  setup.py
protobuf3_to_dict/: __init__.py  convertor.py
protobuf_to_dict/: __init__.py  convertor.py
src/: protobuf_to_dict.py
src/tests/: sample.proto  sample_pb2.py  test_proto_to_dict.py
tests/: compile.sh  sample.proto  sample_old.proto  sample_pb2.py  test_proto_to_dict.py
